# wikiextract

./: README.md  pyproject.toml
scripts/: runcoverage.sh  runextract.sh  runlint.sh  runtests.sh
src/wikiextract/: extract.py  extractor.py  extractpage.py  sortedcollection.py  textchunks.py
tests/: test_sortedcollection.py  test_textchunks.py
wikiextractor/: WikiExtractor.py
